# ocr-service

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  env.example  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  router.py
app/api/v1/handlers/: __init__.py  health_handler.py  ocr_handler.py
app/core/: __init__.py  enums.py  exceptions.py  logging.py
app/infrastructure/: __init__.py
app/infrastructure/ocr_engines/: __init__.py  base_engine.py  easyocr_engine.py  paddleocr_engine.py
app/models/: __init__.py  domain.py  requests.py  responses.py
app/services/: __init__.py  ocr_service.py  receipt_parser.py
app/utils/: image_utils.py
services/aligner/: Dockerfile  README.md  main.py  pom.xml  pyproject.toml
services/aligner/src/: __init__.py  config.py  dependencies.py  logger.py  main.py
services/aligner/src/api/routes/: __init__.py  aligner.py
services/aligner/src/main/java/org/me/aligner/: AlignService.java  AlignerApplication.java  AlignerController.java
services/aligner/src/main/resources/: application.properties
services/aligner/src/models/: __init__.py  config.py
services/aligner/src/observability/: init.py  metrics.py
services/aligner/src/platform/: storage.py
services/aligner/src/services/: __init__.py  aligner.py  common.py  debug_helper.py  hybrid.py  neural.py
services/aligner/src/test/java/org/me/aligner/: AlignerApplicationTests.java
services/checkCV/: pom.xml
services/checkCV/src/main/java/org/me/: Aligner.java
services/checkCV/src/main/java/org/me/CheckUI/: CheckFrame.java
services/checkCV/src/main/java/org/me/ocr/: OCRReader.java  OCRResult.java
services/gateway/: .dockerignore  .env.example  .prettierrc  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json
services/gateway/migrations/: 0000_initial.sql  0001_preprocessed_variants.sql
services/gateway/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
services/gateway/src/: gateway.ts  worker.ts
services/gateway/src/bootstrap/: gateway.ts  worker.ts
services/gateway/src/common/errors/: base.ts  errors.ts  index.ts
services/gateway/src/common/types/: entities.ts  index.ts
services/gateway/src/gateway/: index.ts
services/gateway/src/gateway/middleware/: inject.ts
services/gateway/src/gateway/routes/: health.ts  index.ts
services/gateway/src/gateway/routes/recognition/: get-image.ts  get-status.ts  index.ts  recognize.ts
services/gateway/src/gateway/types/: index.ts
services/gateway/src/platform/cache/: index.ts
services/gateway/src/platform/config/: index.ts
services/gateway/src/platform/database/: index.ts  logger.ts
services/gateway/src/platform/database/schema/: index.ts  schema.ts  utils.ts
services/gateway/src/platform/database/utils/: index.ts  split-id-generator.ts
services/gateway/src/platform/events/: bus.ts  index.ts  map.ts
services/gateway/src/platform/logger/: index.ts  pino.ts  types.ts
services/gateway/src/platform/ocr-engines/: aligner.ts  index.ts  paddleocr.ts  tesseract.ts
services/gateway/src/platform/queue/: index.ts
services/gateway/src/platform/storage/: index.ts
services/gateway/src/repositories/: images.ts  index.ts  recognitions.ts
services/gateway/src/services/: index.ts  ocr.ts  processor.ts
services/gateway/src/worker/: processor.ts
services/paddleocr/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
services/paddleocr/src/: __init__.py  config.py  dependencies.py  main.py
services/paddleocr/src/api/: __init__.py
services/paddleocr/src/api/routes/: __init__.py  health.py  ocr.py
services/paddleocr/src/models/: __init__.py  ocr.py
services/paddleocr/src/observability/: __init__.py  metrics.py  telemetry.py
services/paddleocr/src/services/: __init__.py  ocr_service.py
services/tesseract/: .gitignore  Dockerfile  README.md  pom.xml  pyproject.toml
services/tesseract/src/: __init__.py  config.py  dependencies.py  main.py
services/tesseract/src/api/routes/: ocr.py
services/tesseract/src/main/java/org/me/tesseractocr/: ServiceTesseract.java  TesseractController.java  TesseractOcrApplication.java
services/tesseract/src/main/resources/: application.properties
services/tesseract/src/models/: __init__.py  ocr.py
services/tesseract/src/observability/: metrics.py
services/tesseract/src/services/: __init__.py  tesseract.py
services/tesseract/src/test/java/org/me/tesseractocr/: TesseractOcrApplicationTests.java
services/visualizer/: .env.example  .pre-commit-config.yaml  Dockerfile  app.py  prompt.txt  pyproject.toml
services/visualizer/src/: animator.py  config.py  deepseek_client.py  event_listener.py  gateway_client.py  storage_client.py
services/visualizer/src/ui/: __init__.py  job_list.py  pipeline_view.py  upload_form.py  utils.py
